docs: content fix what is carbon page

--- a/src/pages/all-about-carbon/what-is-carbon.mdx
+++ b/src/pages/all-about-carbon/what-is-carbon.mdx
@@ -8,14 +8,14 @@ description:
 
 <PageDescription>
 
-Carbon is IBM's open source design system for digital products and experiences.
+Carbon is IBM's open source design system for products and digital experiences.
 With the IBM Design Language as its foundation, the system consists of working
 code, design tools and resources, human interface guidelines, and a vibrant
 community of contributors.
 
 </PageDescription>
 
-## Introduction
+## Welcome
 
 As IBM's official design system, Carbon serves a wide range of designers and
 developers building digital products and experiences.
