chore(content): Use consistent capitalization

--- a/src/pages/community/patterns/generate-an-api-key/index.mdx
+++ b/src/pages/community/patterns/generate-an-api-key/index.mdx
@@ -28,7 +28,7 @@ The reusable code component can be found in
   <AnchorLink>General access keys</AnchorLink>
   <AnchorLink>Restricted access keys</AnchorLink>
   <AnchorLink>Show the API key in context (optional)</AnchorLink>
-  <AnchorLink>API key management page (Optional)</AnchorLink>
+  <AnchorLink>API key management page (optional)</AnchorLink>
   <AnchorLink>Edit an API key (optional)</AnchorLink>
 </AnchorLinks>{' '}
 
@@ -238,7 +238,7 @@ The user may also need the option to generate a new API key.
 </Column>
 </Row>
 
-## API key management page (Optional)
+## API key management page (optional)
 
 Some products and platforms may include an API key management page. This is a
 central location where API keys can be created, reviewed, or edited.
