edits from feedback

--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -164,6 +164,22 @@ icons, and search.
 | Account       | 2nd from the right                     |                                                                                                                                                                                                              |
 | Switcher      | Right                                  | The switcher should always be positioned as the furthest right icon. This ensures the icon does not shift when navigating across systems.                                                                    |
 
+## Content
+
+### Main Elements
+
+#### Header name
+
+The header name should be the name of the parent domain and be as brief as
+possible while giving the user a sense of place. The header name is always
+preceded by “IBM" for IBM products.
+
+#### Header links
+
+Header links should be unique and clearly describe the the content and location
+that it will link to. Avoid using verbs as header links which could imply that
+an action will be taken when clicking a header link.
+
 ## Behaviors
 
 ### Interactions
@@ -205,6 +221,17 @@ region and begin interacting with the page’s main content area.
 
 </Column>
 </Row>
+
+#### Screen readers
+
+VoiceOver: Users can trigger a state change by pressing `Control-Option-Space`
+or `Space` while the header area has screen reader focus.
+
+JAWS: Users can trigger a state change by pressing `Enter` or `Space` while the
+header area has screen reader focus.
+
+NVDA: Users can trigger a state change by pressing `Enter` or `Space` while the
+header area has screen reader focus.
 
 ### Responsive behavior
 
