Update events -> meetups

--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -88,12 +88,12 @@ You can find out about Carbon's latest changes and future plans on the
 
 If you have questions, here are all the ways to [contact us](/help/contact-us).
 
-### Join us at an event
+### Join us at a meetup
 
-Attend one of our [events](/whats-happening/events) to connect with us and level
-up your skills. The weekly design playback is great for getting feedback on work
-in progress from a group of designers and design leaders dedicated to your
-success.
+Attend one of our [meetups](/whats-happening/meetup) to connect with us and
+level up your skills. The weekly design playback is great for getting feedback
+on work in progress from a group of designers and design leaders dedicated to
+your success.
 
 We will be adding more Events moving forward, but if there's something in
 particular you're interested in, we'd love to
