--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Events
+title: Meetups
 description:
   The Carbon team is committed to making members of the community successful.
-  Find events for learning what’s new, tips and tricks, and leveling up your
+  Find meetups for learning what’s new, tips and tricks, and leveling up your
   skills.
 ---
 
@@ -12,12 +12,12 @@ import { ArrowRight16 } from '@carbon/icons-react';
 <PageDescription>
 
 The Carbon team is committed to helping members of the community be successful.
-Find events for leveling up your skills, connecting with your peers, and getting
-reviews on work in progress.
+Find meetups for leveling up your skills, connecting with your peers, and
+getting reviews on work in progress.
 
 </PageDescription>
 
-<Row className="events-list">
+<Row className="meetups-list">
 <Column colLg={4} colMd={2}>
 
 ![](/images/events_design_playback.png)
@@ -39,13 +39,13 @@ work in progress and learn that way.
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
+  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
   Email us
 </Button>
 
 </Column>
 </Row>
-<Row className="events-list">
+<Row className="meetups-list">
 <Column colLg={4} colMd={2}>
 
 ![](/images/events_insiders.png)
@@ -58,20 +58,21 @@ work in progress and learn that way.
   <span>First Fridays, 9:30am–10:30am Central</span>
 </h2>
 
-_For IBMers only:_ A monthly meetup for all teams who are building on top of
-Carbon to discuss best practices, areas to consolidate, and things Carbon can do
-to make your jobs easier.
+_For IBMers only:_ A monthly meeting for developers in IBM product teams to come
+together with other Carbon developers and designers. Talk through questions,
+challenges, and share ideas for building products with Carbon. All topics
+welcome.
 
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
+  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
   Email us
 </Button>
 
 </Column>
 </Row>
-<Row className="events-list">
+<Row className="meetups-list">
 <Column colLg={4} colMd={2}>
 
 ![](/images/events_pinup.png)
@@ -92,7 +93,7 @@ smallest detail! Usually two or more hours.
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
+  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
   Email us
 </Button>
 
