--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -42,7 +42,7 @@ independently, but the components were designed to work together.
 | ------------------ | --------------------------------------------------------------------------------------------------------------------------------------- |
 | Header             | The highest level of navigation. The header can be used on its own for simple products or be used to trigger the left and right panels. |
 | Left panel         | An optional panel that is used for a product's navigation.                                                                              |
-| Right panel        | An optional panel that shows additional system level actions or content associated with a system icon in the header.                    |
+| Right panel        | An optional panel that shows additional system-level actions or content associated with a system icon in the header.                    |
 
 ### When to use
 
