--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -55,7 +55,7 @@ independently, but the components were designed to work together.
 | ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------- |
 | Header base            | Has a persistent site title that can be used to identify a single page UI.                                                                    |
 | Header with navigation | Includes links and dropdowns for a simple navigation.                                                                                         |
-| Header with actions    | Actions or utilities appear in the header as icon buttons to give users quick access to common utilites.                                      |
+| Header with actions    | Actions or utilities appear in the header as icon buttons to give users quick access to common utilities.                                      |
 | Header with sidenav    | The header can be paired with the [UI shell left panel](/components/UI-shell-left-panel/usage) to offer a deeper level of navigation in a UI. |
 
 ## Live demo
