--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -206,7 +206,7 @@ through first.
 
 [Success Criterion 2.4.1 (Bypass Blocks)](https://www.w3.org/TR/2016/NOTE-WCAG20-TECHS-20161007/G1)
 suggest bypassing these blocks by providing a "Skip to main" link at the start of
-you navigation’s focusable controls. This lets users easily skip the navigation
+the navigation’s focusable controls. This lets users easily skip the navigation
 region and begin interacting with the page’s main content area.
 
 <Row>
