--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -176,7 +176,7 @@ preceded by “IBM" for IBM products.
 
 #### Header links
 
-Header links should be unique and clearly describe the the content and location
+Header links should be unique and clearly describe the content and location
 that it will link to. Avoid using verbs as header links which could imply that
 an action will be taken when clicking a header link.
 
