--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -95,6 +95,5 @@ level up your skills. The weekly design playback is great for getting feedback
 on work in progress from a group of designers and design leaders dedicated to
 your success.
 
-We will be adding more Events moving forward, but if there's something in
-particular you're interested in, we'd love to
+If there’s something in particular you’re interested in, we’d love to
 [hear from you](https://github.com/carbon-design-system/carbon-website/issues/new/choose).
