--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -39,7 +39,7 @@ work in progress and learn that way.
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
+  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
   Email us
 </Button>
 
@@ -66,7 +66,7 @@ welcome.
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
+  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
   Email us
 </Button>
 
@@ -93,7 +93,7 @@ smallest detail! Usually two or more hours.
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:email@gmail.com')}>
+  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
   Email us
 </Button>
 
