--- a/src/pages/components/content-switcher/accessibility.mdx
+++ b/src/pages/components/content-switcher/accessibility.mdx
@@ -62,7 +62,7 @@ be updated when these accessibility issues are resolved.
 ## Accessibility testing
 
 Automated, manual and screen reader accessibility verification test has been
-performed on the Tabs React Carbon Component.
+performed on the Content Switcher React Carbon Component.
 [WCAG 2.1 Level A and AA success criteria](https://www.w3.org/TR/WCAG21/) issues
 have been identified and the list of open accessibility violations is available
 in the Carbon Component GitHub repository.
