--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -90,7 +90,7 @@ If you have questions, here are all the ways to [contact us](/help/contact-us).
 
 ### Join us at a meetup
 
-Attend one of our [meetups](/whats-happening/meetup) to connect with us and
+Attend one of our [meetups](/whats-happening/meetups) to connect with us and
 level up your skills. The weekly design playback is great for getting feedback
 on work in progress from a group of designers and design leaders dedicated to
 your success.
