--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -16,32 +16,24 @@ interaction patterns that persist between and across products.
 
 <AnchorLinks>
 
-<AnchorLink>General guidance</AnchorLink>
-<AnchorLink>Anatomy</AnchorLink>
-<AnchorLink>Icon placement</AnchorLink>
-<AnchorLink>Behavior</AnchorLink>
+<AnchorLink>Overview</AnchorLink>
+<AnchorLink>Live demo</AnchorLink>
+<AnchorLink>Formatting</AnchorLink>
+<AnchorLink>Content</AnchorLink>
+<AnchorLink>Behaviors</AnchorLink>
+<AnchorLink>Related</AnchorLink>
+<AnchorLink>References</AnchorLink>
+<AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
 
-![UI shell header](images/zones-platform.png)
+## Overview
 
-<Caption>UI shell header</Caption>
+The UI shell header is the foundation for navigating and orienting your user to
+the UI. The UI shell header can be used by itself or combined with the UI shell
+left and right panels for more complex UI navigation.
 
-## Resources
-
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="UI Shell template"
-      href="https://sketch.cloud/s/EjVmA">
-      <MdxIcon name="sketch" />
-    </ResourceCard>
-  </Column>
-</Row>
-
-## General guidance
-
-The UI shell is made up of three components: The header, the
+The UI shell is made up of three components—the header, the
 [left panel](/components/UI-shell-left-panel/usage), and the
 [right panel](/components/UI-shell-right-panel/usage). All three can be used
 independently, but the components were designed to work together.
@@ -50,11 +42,43 @@ independently, but the components were designed to work together.
 | ------------------ | --------------------------------------------------------------------------------------------------------------------------------------- |
 | Header             | The highest level of navigation. The header can be used on its own for simple products or be used to trigger the left and right panels. |
 | Left panel         | An optional panel that is used for a product's navigation.                                                                              |
-| Right panel        | An optional panel that shows additional system level actions or content associated with a system icon in the header.                    |
+| Right panel        | An optional panel that shows additional system-level actions or content associated with a system icon in the header.                    |
 
-![UI shell components.](images/shell-usage-1.png)
+### When to use
 
-<Caption>UI shell components</Caption>
+- Identify the UI by name.
+- Globally persistent location for navigational links and utilities.
+
+### Types
+
+| Type                   | Purpose                                                                                                                                       |
+| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------- |
+| Header base            | Has a persistent site title that can be used to identify a single page UI.                                                                    |
+| Header with navigation | Includes links and dropdowns for a simple navigation.                                                                                         |
+| Header with actions    | Actions or utilities appear in the header as icon buttons to give users quick access to common utilities.                                      |
+| Header with sidenav    | The header can be paired with the [UI shell left panel](/components/UI-shell-left-panel/usage) to offer a deeper level of navigation in a UI. |
+
+## Live demo
+
+<Row>
+  <Column>
+    <iframe
+      loading="lazy"
+      src="https://codesandbox.io/embed/header-with-actions-and-nav-m0lo2?fontsize=14&hidenavigation=1&view=preview"
+      title="header-with-actions-and-nav"
+      allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media"
+      style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
+      sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
+    />
+  </Column>
+</Row>
+
+## Formatting
+
+### Anatomy
+
+The header spans the full width of the viewport and is the topmost element in
+the browser window. The header is persistent throughout the product experience.
 
 For each UI shell component, left-to-right translates to product-to-global. The
 left side of the header contains items relevant at the product level. Moving to
@@ -63,59 +87,43 @@ middle of the header should represent system-level controls. Elements on the
 right side of the header, such as the switcher, are the most global in their
 scope and span multiple products.
 
-## Anatomy
+<Row>
+<Column colLg={12}>
 
-The header spans the full width of the viewport and is the topmost element in
-the browser window. Header elements are persistent throughout the product
-experience.
+![Header anatomy](images/header_anatomy.png)
 
-![Primary header](images/header-usage-2.png)
+</Column>
+</Row>
 
-<Caption>Primary header</Caption>
+1. **Hamburger menu**: The hamburger icon is used to open product navigation
+   such as the [left panel.](/components/UI-shell-left-panel/usage) The
+   hamburger menu is only needed when there is a collapsable left navigation.
 
-### Header elements
+2. **Header name**: For IBM products, the header name is always preceded by
+   “IBM.”
 
-#### Hamburger menu
+3. **Header links**: Links in the header are supported as product navigation, if
+   required. These links move to the side menu in narrow screen widths.
 
-The hamburger icon is used to open product navigation such as the
-[left panel.](/components/UI-shell-left-panel/usage)
+4. **Sub-menu**: Sub-menus are supported as product navigation, if required.
+   Include the down-pointing chevron after the link label. Sub-menus open on
+   click and are closed by either selecting an item in the menu, clicking
+   outside the menu area, or clicking on the menu label. When open, the chevron
+   should point up. Sub-menu labels serve only to open the dropdown; they cannot
+   link to another page in the product.
 
-#### Header name
+5. **Header utilities**: These utilities are reserved for universal,
+   system-level functions such as profile, search, notifications, and similar
+   functions. Not every product on a system is required to show the same
+   utilities, but it is recommended for a better cross-product user experience.
 
-For IBM products, the header name is always preceded by “IBM”.
+6. **Switcher**: The switcher provides a way for the user to easily navigate
+   _between_ products and systems. Recommended uses for this component include
+   recently used apps, frequently used apps, or all apps attached to the user’s
+   account. If the list is a manageable size, include all apps or products
+   available on the system.
 
-#### Header links
-
-Links in the header are supported as product navigation, if required. These
-links move to the side menu in narrow screen widths.
-
-#### Sub-menu
-
-Sub-menus are supported as product navigation, if required. Include the
-down-pointing chevron after the link label. Sub-menus open on click and are
-closed by either selecting an item in the menu, clicking outside the menu area,
-or clicking on the menu label. When open, the chevron should point up. Sub-menu
-labels serve only to open the dropdown; they cannot link to another page in the
-product.
-
-#### Header utilities
-
-These utilities are reserved for universal, system-level functions such as
-profile, search, notifications, and similar functions. Not every product on a
-system is required to show the same utilities, but it is recommended for a
-better cross-product user experience.
-
-#### Switcher
-
-The switcher provides a way for the user to easily navigate _between_ products
-and systems. Recommended uses for this component include recently used apps,
-frequently used apps, or all apps attached to the user’s account. If the list is
-a manageable size, include all apps or products available on the system.
-
-Links to related systems should also live in the switcher. If you’re building a
-product for IBM, your switcher should include a link to [IBM.](http://ibm.com/)
-
-## Icon placement
+### Placement
 
 Icons are not a required element of the header and a product may choose to use
 any set of icons for their UI. Icons should always be aligned to the right of
@@ -124,39 +132,108 @@ the header with no gaps between icons.
 <DoDontRow>
   <DoDont caption="Header utilities are right aligned with no gaps">
 
-![Example of header icons right aligned with no gaps.](images/header-usage-5.png)
+![Example of header icons right aligned with no gaps.](images/utility_placement_do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Header utilities with a gap between the account and help icons.">
 
-![Example of the header icons with a gap between the account and help icons.](images/header-usage-6.png)
+![Example of the header icons with a gap between the account and help icons.](images/utility_placement_dont.png)
 
   </DoDont>
 </DoDontRow>
 
 ### Example placement
 
-The example below shows a header with a switcher, three core icons, a product
-icon, and search.
+The example below shows a header with a switcher, typical platform utility
+icons, and search.
 
 <Row>
 <Column colLg={8}>
 
-![icon placement.](images/header-usage-4.png)
+![icon placement.](images/example_placement.png)
 
 </Column>
 </Row>
 
 | Icon          | Position                               |                                                                                                                                                                                                              |
 | ------------- | -------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Search        | Left                                   | Search should always be positioned as the furthest left icon. This is to allow for a expanding search field that does not disrupt other icon positions.                                                      |
+| Search        | Left                                   | Search should always be positioned as the furthest left icon. This is to allow for an expanding search field that does not disrupt other icon positions.                                                     |
 | Other         | Right of Search and left of core icons | The number of header icons a product uses may vary. This placement will help avoid disrupting the position of the core icons and inconsistencies as your user navigates between other product shell headers. |
 | Help          | 4th from the right                     |                                                                                                                                                                                                              |
 | Notifications | 3rd from the right                     |                                                                                                                                                                                                              |
 | Account       | 2nd from the right                     |                                                                                                                                                                                                              |
 | Switcher      | Right                                  | The switcher should always be positioned as the furthest right icon. This ensures the icon does not shift when navigating across systems.                                                                    |
 
-## Behavior
+## Content
+
+### Main Elements
+
+#### Header name
+
+The header name should be the name of the parent domain and be as brief as
+possible while giving the user a sense of place. The header name is always
+preceded by “IBM" for IBM products.
+
+#### Header links
+
+Header links should be unique and clearly describe the content and location
+that it will link to. Avoid using verbs as header links which could imply that
+an action will be taken when clicking a header link.
+
+## Behaviors
+
+### Interactions
+
+#### Mouse
+
+The header element target areas span the full height of the header. See the
+Style tab for detailed visual information about the various states.
+
+<Row>
+<Column colLg={12}>
+
+![UI shell header click targets.](images/header_click_target.png)
+
+</Column>
+</Row>
+
+#### Keyboard
+
+Some users may use a keyboard to navigate your site. Starting focus in the main
+navigation lets them quickly navigate to other areas in your UI, but could block
+them from the main content if there is a large number of navigation items to tab
+through first.
+
+[Success Criterion 2.4.1 (Bypass Blocks)](https://www.w3.org/TR/2016/NOTE-WCAG20-TECHS-20161007/G1)
+suggest bypassing these blocks by providing a "Skip to main" link at the start of
+the navigation’s focusable controls. This lets users easily skip the navigation
+region and begin interacting with the page’s main content area.
+
+<Row>
+<Column  colLg={8} colMd={8} colSm={6} >
+
+![hint text](images/skip-to-main-content.gif)
+
+<Caption>
+  The "Skip to main content link" is the first focusable element on the Carbon
+  website.
+</Caption>
+
+</Column>
+</Row>
+
+#### Screen readers
+
+VoiceOver: Users can trigger a state change by pressing `Control-Option-Space`
+or `Space` while the header area has screen reader focus.
+
+JAWS: Users can trigger a state change by pressing `Enter` or `Space` while the
+header area has screen reader focus.
+
+NVDA: Users can trigger a state change by pressing `Enter` or `Space` while the
+header area has screen reader focus.
+
+### Responsive behavior
 
 As a header scales down to fit smaller screen sizes, header links and menus
 should collapse into a left-panel hamburger menu. See the examples below to
@@ -165,6 +242,34 @@ better understand the header's responsive behavior.
 If your UI includes a left panel, the header links should be added above the
 left panel items, pushing them down accordingly.
 
-![An example of the header responding to different screen sizes.](images/header-usage-3.png)
+<Row>
+<Column colLg={12}>
 
-<Caption>Header responsive behavior</Caption>
+![An example of the header responding to different screen sizes.](images/responsive_header.png)
+
+</Column>
+</Row>
+
+## Related
+
+The following components are additional ways to organize and navigate data.
+
+- [UI Shell left panel](/components/UI-shell-left-panel/usage/)
+
+- [UI shell right panel](/components/UI-shell-right-panel/usage/)
+
+## References
+
+- Susan Farrell,
+  [Utility Navigation: What It Is and How to Design It](https://www.nngroup.com/articles/utility-navigation/)
+  (Nielsen Norman Group, 2015)
+- WebAIM, [_"Skip Navigation" Links_](https://webaim.org/techniques/skipnav/)
+  (2013)
+- [Web Content Accessibility Guidelines](https://www.w3.org/WAI/standards-guidelines/wcag/)
+  (W3C, 2018)
+
+## Feedback
+
+Help us improve this component by providing feedback, asking questions, and
+leaving any other comments on
+[GitHub](https://github.com/carbon-design-system/carbon-website/issues/new?assignees=&labels=feedback&template=feedback.md).
