responsive image update and included numbers in position example

--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -55,7 +55,7 @@ independently, but the components were designed to work together.
 | ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------- |
 | Header base            | Has a persistent site title that can be used to identify a single page UI.                                                                    |
 | Header with navigation | Includes links and dropdowns for a simple navigation.                                                                                         |
-| Header with actions    | Actions or utilities appear in the header as icon buttons to give users quick access to common utilities.                                      |
+| Header with actions    | Actions or utilities appear in the header as icon buttons to give users quick access to common utilities.                                     |
 | Header with sidenav    | The header can be paired with the [UI shell left panel](/components/UI-shell-left-panel/usage) to offer a deeper level of navigation in a UI. |
 
 ## Live demo
@@ -155,14 +155,14 @@ icons, and search.
 </Column>
 </Row>
 
-| Icon          | Position                               |                                                                                                                                                                                                              |
-| ------------- | -------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| Search        | Left                                   | Search should always be positioned as the furthest left icon. This is to allow for an expanding search field that does not disrupt other icon positions.                                                     |
-| Other         | Right of Search and left of core icons | The number of header icons a product uses may vary. This placement will help avoid disrupting the position of the core icons and inconsistencies as your user navigates between other product shell headers. |
-| Help          | 4th from the right                     |                                                                                                                                                                                                              |
-| Notifications | 3rd from the right                     |                                                                                                                                                                                                              |
-| Account       | 2nd from the right                     |                                                                                                                                                                                                              |
-| Switcher      | Right                                  | The switcher should always be positioned as the furthest right icon. This ensures the icon does not shift when navigating across systems.                                                                    |
+| Icon             | Position                               |                                                                                                                                                                                                              |
+| ---------------- | -------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 1. Search        | Left                                   | Search should always be positioned as the furthest left icon. This is to allow for an expanding search field that does not disrupt other icon positions.                                                     |
+| 2. Other         | Right of Search and left of core icons | The number of header icons a product uses may vary. This placement will help avoid disrupting the position of the core icons and inconsistencies as your user navigates between other product shell headers. |
+| 3. Help          | 4th from the right                     |                                                                                                                                                                                                              |
+| 4. Notifications | 3rd from the right                     |                                                                                                                                                                                                              |
+| 5. Account       | 2nd from the right                     |                                                                                                                                                                                                              |
+| 6. Switcher      | Right                                  | The switcher should always be positioned as the furthest right icon. This ensures the icon does not shift when navigating across systems.                                                                    |
 
 ## Content
 
@@ -176,9 +176,9 @@ preceded by “IBM" for IBM products.
 
 #### Header links
 
-Header links should be unique and clearly describe the content and location
-that it will link to. Avoid using verbs as header links which could imply that
-an action will be taken when clicking a header link.
+Header links should be unique and clearly describe the content and location that
+it will link to. Avoid using verbs as header links which could imply that an
+action will be taken when clicking a header link.
 
 ## Behaviors
 
@@ -205,9 +205,9 @@ them from the main content if there is a large number of navigation items to tab
 through first.
 
 [Success Criterion 2.4.1 (Bypass Blocks)](https://www.w3.org/TR/2016/NOTE-WCAG20-TECHS-20161007/G1)
-suggest bypassing these blocks by providing a "Skip to main" link at the start of
-the navigation’s focusable controls. This lets users easily skip the navigation
-region and begin interacting with the page’s main content area.
+suggest bypassing these blocks by providing a "Skip to main" link at the start
+of the navigation’s focusable controls. This lets users easily skip the
+navigation region and begin interacting with the page’s main content area.
 
 <Row>
 <Column  colLg={8} colMd={8} colSm={6} >
