position descriptions added

--- a/src/pages/components/UI-shell-header/usage.mdx
+++ b/src/pages/components/UI-shell-header/usage.mdx
@@ -155,14 +155,14 @@ icons, and search.
 </Column>
 </Row>
 
-| Icon             | Position                               |                                                                                                                                                                                                              |
-| ---------------- | -------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 1. Search        | Left                                   | Search should always be positioned as the furthest left icon. This is to allow for an expanding search field that does not disrupt other icon positions.                                                     |
-| 2. Other         | Right of Search and left of core icons | The number of header icons a product uses may vary. This placement will help avoid disrupting the position of the core icons and inconsistencies as your user navigates between other product shell headers. |
-| 3. Help          | 4th from the right                     |                                                                                                                                                                                                              |
-| 4. Notifications | 3rd from the right                     |                                                                                                                                                                                                              |
-| 5. Account       | 2nd from the right                     |                                                                                                                                                                                                              |
-| 6. Switcher      | Right                                  | The switcher should always be positioned as the furthest right icon. This ensures the icon does not shift when navigating across systems.                                                                    |
+| Icon             | Placement                                                                                                                                                                                                    |
+| ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 1. Search        | Search should always be positioned as the furthest left icon. This is to allow for an expanding search field that does not disrupt other icon positions.                                                     |
+| 2. Other         | The number of header icons a product uses may vary. This placement will help avoid disrupting the position of the core icons and inconsistencies as your user navigates between other product shell headers. |
+| 3. Help          | Help is positioned 4th from the right.                                                                                                                                                                       |
+| 4. Notifications | Notifications should be 3rd from the right when paired with the account and switcher icon.                                                                                                                   |
+| 5. Account       | The account should be the 2nd from the right. This global link gives a user quick access to their account from anywhere in the product UI.                                                                   |
+| 6. Switcher      | The switcher should always be positioned as the furthest right icon. This ensures the icon does not shift when navigating across systems.                                                                    |
 
 ## Content
 
@@ -204,7 +204,8 @@ navigation lets them quickly navigate to other areas in your UI, but could block
 them from the main content if there is a large number of navigation items to tab
 through first.
 
-[Success Criterion 2.4.1 (Bypass Blocks)](https://www.w3.org/TR/2016/NOTE-WCAG20-TECHS-20161007/G1) suggest bypassing these blocks by providing a "Skip to main" link at the start
+[Success Criterion 2.4.1 (Bypass Blocks)](https://www.w3.org/TR/2016/NOTE-WCAG20-TECHS-20161007/G1)
+suggest bypassing these blocks by providing a "Skip to main" link at the start
 of the navigation’s focusable controls. This lets users easily skip the
 navigation region and begin interacting with the page’s main content area.
 
