docs: add Medium post to Home and News pages

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -109,6 +109,20 @@ building websites and user interfaces.
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
+
+<ArticleCard
+    color="dark"
+    title="Carbon's new information architecture"
+    author="Jan Child"
+    date="August 31, 2020"
+    href="https://medium.com/carbondesign/carbons-new-information-architecture-531c52207205"
+    >
+
+![New information architecture](/whats-happening/news-and-articles/images/new_IA.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
     color="dark"
     title="Seven new UX patterns for Carbon"
@@ -135,17 +149,4 @@ building websites and user interfaces.
 </ArticleCard>
 </Column>
 
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    color="dark"
-    title="New in Carbon: October 2019"
-    author="Tyler Tate"
-    date="October 10, 2019"
-    href="https://medium.com/carbondesign/october-release-fadc38b757ad"
-    >
-
-![New in Carbon article](whats-happening/news-and-articles/images/v10.7-release.png)
-
-</ArticleCard>
-</Column>
 </Row>
