--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -20,7 +20,19 @@ about design systems.
 ## Latest news
 
 <Row>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 
+<ArticleCard
+    title="Carbon's new information architecture"
+    author="Jan Child"
+    date="August 31, 2020"
+    href="https://medium.com/carbondesign/carbons-new-information-architecture-531c52207205"
+    >
+
+![New information architecture](/images/new_IA.png)
+
+</ArticleCard>
+</Column>
 <Column colLg={4} colMd={4} noGutterMdLeft>
 
 <ArticleCard
@@ -31,6 +43,18 @@ about design systems.
     >
 
 ![](/images/patterns_announcement.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Adobe XD Carbon starter kit announced at Max"
+    author="Ashley Still"
+    date="November 4, 2019"
+    href="https://theblog.adobe.com/adobe-and-ibm-ix-extend-partnership-to-help-enterprises-design-powerful-and-consistent-customer-experiences/"
+    >
+
+![Adobe and IBM partnership](/images/xd_kit_img.png)
 
 </ArticleCard>
 </Column>
