Tweak to file uploader

--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -159,6 +159,9 @@ uploader.
 3. **Button or drop zone:** The action to select a file to upload.
 4. **Uploaded file:** A file that has successfully been uploaded.
 
+Do not use upload in a modal when multiple files are uploaded, as uploaded files
+stack vertically.
+
 ### Sizing
 
 The button and uploaded files should be the same height. If the file uploader is
@@ -181,7 +184,7 @@ the file uploader for consistency.
 
 ### Alignment
 
-Right align the button or drop zone area with the uploaded files. Multiple files
+Left align the button or drop zone area with the uploaded files. Multiple files
 will stack vertically.
 
 <Row>
