--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -48,6 +48,35 @@ work in progress and learn that way.
 <Row className="meetups-list">
 <Column colLg={4} colMd={2}>
 
+![](/images/meetups_dataviz.png)
+
+</Column>
+<Column colLg={7} colMd={5}>
+
+<h2>
+  Data visualization weekly playback
+  <span>Wednesdays, 11am–12pm Central</span>
+</h2>
+
+_For IBMers only:_ Are you designing a product with data visualization needs?
+These weekly playback calls are a chance for us to have dataviz stakeholders
+present, discuss design explorations, gather feedback and business unit
+requirements, and determine next steps on requested components or functionality.
+Join us to share, or come along to see other work in progress and learn that
+way.
+
+<Button
+  kind="tertiary"
+  renderIcon={ArrowRight16}
+  onClick={() => (window.location.href = 'mailto:iliadm@ca.ibm.com')}>
+  Email us
+</Button>
+
+</Column>
+</Row>
+<Row className="meetups-list">
+<Column colLg={4} colMd={2}>
+
 ![](/images/events_insiders.png)
 
 </Column>
