docs: data viz meetup contact update

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -62,15 +62,10 @@ _For IBMers only:_ Are you designing a product with data visualization needs?
 These weekly playback calls are a chance for us to have dataviz stakeholders
 present, discuss design explorations, gather feedback and business unit
 requirements, and determine next steps on requested components or functionality.
-Join us to share, or come along to see other work in progress and learn that
-way.
 
-<Button
-  kind="tertiary"
-  renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:iliadm@ca.ibm.com')}>
-  Email us
-</Button>
+Join us to share, or come along to see other work in progress and learn that
+way. For details, message
+[Eliad Moosavi](https://ibm-studios.slack.com/archives/DU4G3QEKC).
 
 </Column>
 </Row>
