--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -48,7 +48,7 @@ work in progress and learn that way.
 <Row className="meetups-list">
 <Column colLg={4} colMd={2}>
 
-![](/images/meetups_dataviz.png)
+![](/images/meetups_data_viz.png)
 
 </Column>
 <Column colLg={7} colMd={5}>
