--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -1,43 +1,67 @@
 ---
 title: The team
 description:
+  The Carbon design system is not just the effort of one central team. To
+  sustain productive contribution, and maintain a clear direction for Carbon as
+  a whole, there are various groups to provide governance and support.
 ---
 
 <PageDescription>
 
-The Carbon design system is not just the effort of one central team. Carbon is a
-community-driven open-source project. To sustain productive contribution, and
-maintain a clear direction for Carbon as a whole, there are various groups to
-provide governance and support.
+The Carbon design system is not just the effort of one central team. To sustain
+productive contribution, and maintain a clear direction for Carbon as a whole,
+there are various groups to provide governance and support.
 
 </PageDescription>
 
 <AnchorLinks>
+  <AnchorLink>Overview</AnchorLink>
   <AnchorLink>The Carbon team</AnchorLink>
   <AnchorLink>Board of directors</AnchorLink>
   <AnchorLink>Steering committee</AnchorLink>
   <AnchorLink>Expert and project teams</AnchorLink>
 </AnchorLinks>
 
+## Overview
+
+Carbon is funded and built by IBM. Although that means we build for the
+company’s business needs, Carbon is also an open source community-driven
+project. It is available for anyone to use and everyone is encouraged to
+contribute.
+
+To sustain productive contribution, and maintain a clear direction for Carbon as
+a whole, there are various groups within IBM that provide governance and
+support.
+
 ## The Carbon team
 
-Blurb and pictures of the Carbon team itself go here.
+Carbon is maintained by a core team of designers, developers, and writers based
+in the Austin, Texas IBM Design Studio.
 
 ## Board of directors
 
-### Purpose
+The Carbon Design System Board of Directors is comprised of executive
+stakeholders. They oversee the direction of Carbon.
 
-The board holds the steering committee, and Carbon as a whole, accountable for
-delivery and business impact. They provide the steering committee feedback on
-business need, to facilitate a Carbon roadmap that meets those needs.
+### Responsibilities
 
-The board, comprising of executive stakeholders, commits to champion Carbon
-adoption and Carbon standards within their organization. They also commit to,
-where possible, engaging design or development resources from within their
-organization to help accomplish the Carbon roadmap.
+The key responsibilities of the Board are as follows:
 
-The Carbon Design System board of directors receives a quarterly report from the
-Carbon Design System steering committee.
+- Hold the steering committee, and Carbon as a whole, accountable for delivery
+  of design excellence, standards, guidance and business impact.
+- Provide the steering committee feedback on business needs, to facilitate a
+  Carbon roadmap that meets those needs.
+- Champion Carbon adoption and Carbon standards within their organization.
+- Where possible, commit to engaging design or development resources from within
+  their organization to help accomplish the Carbon roadmap.
+
+The Board is supported by the Steering Committee, whose role is to provide
+oversight and direction for Carbon and its community, and related projects.
+
+Members of the Board meet for one half day every quarter, at which they review a
+quarterly report from the Steering Committee. This report details the status of
+design quality, adoption, and contribution from the product teams/business units
+from the Carbon Design System.
 
 ### Members
 
@@ -45,75 +69,62 @@ to be confirmed
 
 ## Steering committee
 
-### Purpose
+The Carbon Design System Steering Committee provides oversight and direction for
+Carbon and its design and development community, and related projects.
 
-The Carbon Design System steering committee provides oversight and direction for
-Carbon, its community, and related projects.
+### Responsibilities
 
-The steering committee:
+The key responsibilities of the committee are as follows:
 
-- Supports strategy, quality, and consistency within the design system
-- Promotes and supports usage of and contribution to the Carbon Design System
-  within their organizations
-- Identifies, and aligns, components/patterns/content that are multi-product, or
-  universal usage
-- Facilitates consolidation of components and patterns where multiples exist -
-  i.e. “pick winners”
-- Assesses and votes to approve or deny community proposals (e.g. if a
-  particular PAL might warrant the "Carbon for [x]" title, if individuals or
-  teams can be given _committer_ rights to all or part of the Carbon codebase)
-- Approves the creation of project teams or expert groups, and their scope of
-  committed work
-- Support guilds and projects teams by recommending members who can contribute
+- Improve design strategy, quality, and consistency within the design system.
+- Promote and support usage of and contribution to the Carbon Design System
+  within their organizations.
+- Identify and align components/patterns/content that are multi-product or
+  universal.
+- Facilitate consolidation of components and patterns where multiples exist -
+  i.e. “pick winners”.
+- Assess and vote to approve or deny community proposals (e.g. if a particular
+  PAL might warrant the "Carbon for [x]" title, if individuals or teams can be
+  given _committer_ rights to all or part of the Carbon codebase).
+- Approve the creation of working groups and their scope of committed work and
+  recommend members who can contribute.
 - Assist with standardizing information and tooling to support sharing across
-  teams and business units
-- Provides a quarterly update to the Board of Directors
-
-The steering committee agrees that their decisions will be taken by a vote. A
-"yes" == +1 vote, "abstain" == 0 vote, "no" == -1 vote. A proposal needs +3
-total votes for approval.
-
-The steering committee meets every two weeks.
+  teams and business units.
+- Provide a quarterly update to the Board of Directors.
 
 ### Members
 
 to be confirmed
 
-## Expert and project teams
+## Working groups
 
-Expert teams are permanent or semi-permanent groups of subject matter experts.
-They can be formed from scratch, or might leverage an existing guild or work
-group.
+Working groups are subject matter experts with a particular focus area. They can
+be formed from scratch, or might comprise an existing guild or group. They may
+be permanent initiatives, or formed for specific projects with a committed scope
+of work.
 
-Project teams are formed to work on specific community initiatives, with a clear
-end point. They are not intended to be permanent.
+Proposals for the formation of working groups are submitted to the steering
+committee for approval.
 
-Proposals for the formation of expert or project teams are submitted to the
-steering committee for approval.
+### Current working groups
 
-## Current teams
+#### Developer facilitation
 
-### Expert team - Developer facilitation
-
-#### Purpose
+The key responsibilities of this group are:
 
 - Highlight technical challenges and obstacles to adoption, and recommended
-  tooling and solutions
+  tooling and solutions.
 - Work to ensure technical alignment of components and patterns with the system
-  as a whole
-- Identify and encourage high quality project maintainers and committers
+  as a whole.
+- Identify and encourage high quality project maintainers and committers.
 
-#### Members
+Members to be confirmed.
 
-to be confirmed
+#### Data visualization
 
-### Expert team - Data visualization
+The key responsibilities of this group are:
 
-#### Purpose
+- Prioritize chart and data visualization types for design attention.
+- Support teams in using the best chart implementations for their product needs.
 
-- Prioritize chart and data visualization types for design attention
-- Support teams in using the best chart implementations for their product needs
-
-#### Members
-
-to be confirmed
+Members to be confirmed.
