docs: updates to intro

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -1,16 +1,16 @@
 ---
 title: The team
 description:
-  The Carbon design system is not just the effort of one central team. To
-  sustain productive contribution, and maintain a clear direction for Carbon as
-  a whole, there are various groups to provide governance and support.
+  Carbon is not just one team. To sustain productive contribution and maintain a
+  clear direction for Carbon as a whole, various groups works together to
+  provide direction, governance, and support.
 ---
 
 <PageDescription>
 
-The Carbon design system is not just the effort of one central team. To sustain
-productive contribution, and maintain a clear direction for Carbon as a whole,
-there are various groups to provide governance and support.
+Carbon is not just one team. To sustain productive contribution and maintain a
+clear direction for Carbon as a whole, various groups works together to provide
+direction, governance, and support.
 
 </PageDescription>
 
@@ -24,12 +24,11 @@ there are various groups to provide governance and support.
 
 ## Overview
 
-Carbon is funded and built by IBM. Although that means we build for the
-company’s business needs, Carbon is also an open source community-driven
-project. It is available for anyone to use and everyone is encouraged to
-contribute.
+Carbon is funded and built by IBM. That means we build for the company’s
+business needs. Carbon is also an open source community-driven project. It is
+available for anyone to use and everyone is encouraged to contribute.
 
-To sustain productive contribution, and maintain a clear direction for Carbon as
+To sustain productive contribution and maintain a clear direction for Carbon as
 a whole, there are various groups within IBM that provide governance and
 support.
 
