docs: copy tweaks

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -34,8 +34,8 @@ support.
 
 ## The Carbon team
 
-Carbon is maintained by a core team of designers, developers, and writers based
-in the Austin, Texas IBM Design Studio.
+Carbon is maintained by a dedicated team of designers, developers, and writers
+based in the Austin, Texas IBM Design Studio.
 
 ## Board of directors
 
