docs(tutorial): link to badge application site

--- a/src/pages/developing/react-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/react-tutorial/wrapping-up.mdx
@@ -9,9 +9,9 @@ tabs:
 
 <PageDescription>
 
-Thanks for completing the IBM Carbon tutorial and helping us improve it along
-the way. If you want to show the world your new skills, you can apply for an IBM
-Digital Badge.
+Thanks for completing our tutorial and helping us improve it along the way. If
+you want to show the world your new skills, you can apply for an IBM Digital
+Badge.
 
 </PageDescription>
 
@@ -25,8 +25,8 @@ Digital Badge.
 ## Application form
 
 Once you complete all five steps of the tutorial, you can apply for an
-[IBM Digital Badge](https://www.surveygizmo.com/s3/5163103/IBM-Carbon-Design-System-Developer-Essentials-React-v2).
-These badges are available to anybody — not just IBM employees.
+[IBM Digital Badge](https://badges.carbondesignsystem.com). These badges are
+available to anybody — not just IBM employees.
 
 <Row>
 <Column colLg={8}>
@@ -38,13 +38,9 @@ These badges are available to anybody — not just IBM employees.
 </Column>
 </Row>
 
-Once you submit the application, please allow a few weeks for issuing the badge.
-Once the badge is issued, you will be notified and must accept the badge via
-Acclaim.
-
 ## Badge information
 
-### IBM Design System React Components
+### [IBM Carbon Design System Developer Essentials - React](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-react)
 
 This badge demonstrates knowledge about Carbon's React components. To earn the
 badge:
@@ -57,8 +53,7 @@ badge:
    - Step 5. [Deploying to IBM Cloud](/developing/react-tutorial/step-5)
 2. Have approved pull requests for steps 1 through 5 in the
    [carbon-tutorial repository](https://github.com/carbon-design-system/carbon-tutorial)
-3. Complete the
-   [badge application](https://www.surveygizmo.com/s3/5163103/IBM-Carbon-Design-System-Developer-Essentials-React-v2)
+3. Complete the [badge application](https://badges.carbondesignsystem.com)
 
 <InlineNotification>
 
@@ -70,7 +65,7 @@ badge:
 
 ### FAQ and help
 
-Badge issuer contact: matt.rosno@ibm.com
+Badge issuer contact: matt.rosno@ibm.com.
 
 For questions related to your Acclaim badge earner account and profile, as well
 as issues related to claiming your badge after receiving a notification, go to
@@ -95,4 +90,4 @@ employees can view the IBM Internal Privacy Statement here:
 ### Application form
 
 To apply for the IBM Digital Badge, please complete the
-[form and survey](https://www.surveygizmo.com/s3/5163103/IBM-Carbon-Design-System-Developer-Essentials-React-v2).
+[form and survey](https://badges.carbondesignsystem.com).
