--- a/src/pages/developing/vue-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/vue-tutorial/wrapping-up.mdx
@@ -25,26 +25,22 @@ Badge.
 ## Application form
 
 Once you complete all five steps of the tutorial, you can apply for an
-[IBM Digital Badge](https://www.surveygizmo.com/s3/5215482/IBM-Carbon-Design-System-Developer-Essentials-Vue-v2).
-These badges are available to anybody — not just IBM employees.
+[IBM Digital Badge](https://badges.carbondesignsystem.com). These badges are
+available to anybody — not just IBM employees.
 
 <Row>
 <Column colLg={8}>
 
-![](/images/carbon-badge-vue.png)
+![](/images/carbon-badge.png)
 
 <Caption>IBM Digital Badge</Caption>
 
 </Column>
 </Row>
 
-Once you submit the application, please allow a few weeks for issuing the badge.
-Once the badge is issued, you will be notified and must accept the badge via
-Acclaim.
-
 ## Badge information
 
-### IBM Design System Vue Components
+### [IBM Carbon Design System Developer Essentials - Vue](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-vue)
 
 This badge demonstrates knowledge about Carbon's Vue components. To earn the
 badge:
@@ -57,20 +53,19 @@ badge:
    - Step 5. [Deploying to IBM Cloud](/developing/vue-tutorial/step-5)
 2. Have approved pull requests for steps 1 through 5 in the
    [carbon-tutorial-vue repository](https://github.com/carbon-design-system/carbon-tutorial-vue)
-3. Complete the
-   [badge application](https://www.surveygizmo.com/s3/5215482/IBM-Carbon-Design-System-Developer-Essentials-Vue-v2)
+3. Complete the [badge application](https://badges.carbondesignsystem.com)
 
 <InlineNotification>
 
 **Note:** To quickly find your submitted PRs, you can
-[filter by author](https://github.com/carbon-design-system/carbon-tutorial/pulls?utf8=%E2%9C%93&q=author%3Ausername)
+[filter by author](https://github.com/carbon-design-system/carbon-tutorial-vue/pulls?utf8=%E2%9C%93&q=author%3Ausername)
 (e.g. `author:${username}`).
 
 </InlineNotification>
 
 ### FAQ and help
 
-Badge issuer contact: matt.rosno@ibm.com
+Badge issuer contact: matt.rosno@ibm.com.
 
 For questions related to your Acclaim badge earner account and profile, as well
 as issues related to claiming your badge after receiving a notification, go to
@@ -95,4 +90,4 @@ employees can view the IBM Internal Privacy Statement here:
 ### Application form
 
 To apply for the IBM Digital Badge, please complete the
-[form and survey](https://www.surveygizmo.com/s3/5215482/IBM-Carbon-Design-System-Developer-Essentials-Vue-v2).
+[form and survey](https://badges.carbondesignsystem.com).
