--- a/src/pages/developing/react-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/react-tutorial/wrapping-up.mdx
@@ -26,7 +26,7 @@ Badge.
 
 Once you complete all five steps of the tutorial, you can apply for an
 [IBM Digital Badge](https://badges.carbondesignsystem.com). These badges are
-available to anybody — not just IBM employees.
+available to anybody who completes the tutorial, not just IBM employees.
 
 <Row>
 <Column colLg={8}>
