--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -1,5 +1,5 @@
 ---
-title: The team
+title: Who we are
 description:
   Carbon is not just one team. To sustain productive contribution and maintain a
   clear direction for Carbon as a whole, various groups works together to
@@ -17,9 +17,10 @@ direction, governance, and support.
 <AnchorLinks>
   <AnchorLink>Overview</AnchorLink>
   <AnchorLink>The Carbon team</AnchorLink>
-  <AnchorLink>Board of directors</AnchorLink>
   <AnchorLink>Steering committee</AnchorLink>
-  <AnchorLink>Expert and project teams</AnchorLink>
+  <AnchorLink>Working groups</AnchorLink>
+  <AnchorLink>Board of directors</AnchorLink>
+
 </AnchorLinks>
 
 ## Overview
@@ -36,35 +37,6 @@ support.
 
 Carbon is maintained by a dedicated team of designers, developers, and writers
 based in the Austin, Texas IBM Design Studio.
-
-## Board of directors
-
-The Carbon Design System Board of Directors is comprised of executive
-stakeholders. They oversee the direction of Carbon.
-
-### Responsibilities
-
-The key responsibilities of the Board are as follows:
-
-- Hold the steering committee, and Carbon as a whole, accountable for delivery
-  of design excellence, standards, guidance and business impact.
-- Provide the steering committee feedback on business needs, to facilitate a
-  Carbon roadmap that meets those needs.
-- Champion Carbon adoption and Carbon standards within their organization.
-- Where possible, commit to engaging design or development resources from within
-  their organization to help accomplish the Carbon roadmap.
-
-The Board is supported by the Steering Committee, whose role is to provide
-oversight and direction for Carbon and its community, and related projects.
-
-Members of the Board meet for one half day every quarter, at which they review a
-quarterly report from the Steering Committee. This report details the status of
-design quality, adoption, and contribution from the product teams/business units
-from the Carbon Design System.
-
-### Members
-
-to be confirmed
 
 ## Steering committee
 
@@ -127,3 +99,32 @@ The key responsibilities of this group are:
 - Support teams in using the best chart implementations for their product needs.
 
 Members to be confirmed.
+
+## Board of directors
+
+The Carbon Design System Board of Directors is comprised of executive
+stakeholders. They oversee the direction of Carbon.
+
+### Responsibilities
+
+The key responsibilities of the Board are as follows:
+
+- Hold the steering committee, and Carbon as a whole, accountable for delivery
+  of design excellence, standards, guidance and business impact.
+- Provide the steering committee feedback on business needs, to facilitate a
+  Carbon roadmap that meets those needs.
+- Champion Carbon adoption and Carbon standards within their organization.
+- Where possible, commit to engaging design or development resources from within
+  their organization to help accomplish the Carbon roadmap.
+
+The Board is supported by the Steering Committee, whose role is to provide
+oversight and direction for Carbon and its community, and related projects.
+
+Members of the Board meet for one half day every quarter, at which they review a
+quarterly report from the Steering Committee. This report details the status of
+design quality, adoption, and contribution from the product teams/business units
+from the Carbon Design System.
+
+### Members
+
+to be confirmed
