--- a/src/pages/community/domain-guidance.mdx
+++ b/src/pages/community/domain-guidance.mdx
@@ -76,6 +76,17 @@ _This content is accessible to IBMers only._
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
+    subTitle="Carbon for IBM.com"
+    href="https://www.ibm.com/standards/web/ibm-dotcom-library/"
+    >
+
+![Bee icon](images/bee.svg)
+
+  </ResourceCard>
+
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
     subTitle="IBM Brand Systems"
     href="https://www.ibm.com/brand/systems"
     >
