docs: add IBMer tag to playback

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -30,11 +30,11 @@ getting reviews on work in progress.
   <span>Fridays, 11am–12pm Central</span>
 </h2>
 
-You’ve got some work in progress and you’re ready to open it up and share it
-with a broader audience for honest (and caring!) feedback. Verify that you’re
-working with the grid correctly, that you’re using the right components, that
-you’re using the correct language. Sign up to share, or come along to see other
-work in progress and learn that way.
+_For IBMers only:_ You’ve got some work in progress and you’re ready to open it
+up and share it with a broader audience for honest (and caring!) feedback.
+Verify that you’re working with the grid correctly, that you’re using the right
+components, that you’re using the correct language. Sign up to share, or come
+along to see other work in progress and learn that way.
 
 <Button
   kind="tertiary"
